submission_driver (copy 9.25.19)/LabKeyFiles/Lab03x/F2018_submissions/students/sc575/sc575.Lab01.compile.out
compiling files:
Source.cpp

g++ -g -Wall -std=c++17 -o run_me *.cpp
Source.cpp: In function ‘int main(int, char**)’:
Source.cpp:62:31: error: expression in new-declarator must have integral or enumeration type
  int **scoresArray = new int*[rows];
                               ^~~~
Source.cpp:65:29: error: expression in new-declarator must have integral or enumeration type
   scoresArray[i] = new int [cols];
                             ^~~~

Compilation Failed!
